# musd

./: .env-example  .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  README.zh-CN.md
.github/: dependabot.yml
.github/workflows/: ci.yaml  release-check.yaml  release-more.yaml  release.yaml
nu/: release.nu
scripts/: common.nu  release  release-pkg.nu  release-ssl.nu  release.nu
src/: build_info.rs  def.rs  download.rs  lib.rs  main.rs
tests/: cli.rs
