[package]
authors = ["hustcer"]
default-run = "musd"
description = "A CLI App to search and download musics"
edition = "2021"
exclude = ["nu", "Justfile", "cliff.toml"]
license = "MIT"
name = "musd"
readme = "README.md"
version = "0.1.2"
homepage = "https://github.com/hustcer/musd"
repository = "git@github.com:hustcer/musd.git"
documentation = "https://github.com/hustcer/musd/blob/main/README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
dialoguer = { version = "0.10.1", features = ["default"] }
futures-util = "0.3"
indicatif = { version = "0.17.0-rc.10" }
reqwest = { version = "0.11.10", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.18.2", features = ["full"] }
url = { version = "2.2.2" }
yansi = { version = "0.5" }
