[package]
authors = ["hustcer"]
default-run = "musd"
description = "A CLI App to search and download musics"
edition = "2021"
exclude = ["nu", "Justfile", "cliff.toml", "bin"]
license = "MIT"
name = "musd"
readme = "README.md"
version = "0.2.1"
build = "build.rs"
homepage = "https://github.com/hustcer/musd"
repository = "https://github.com/hustcer/musd.git"
documentation = "https://github.com/hustcer/musd/blob/main/README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
dialoguer = { version = "0.10.1", features = ["default"] }
futures-util = "0.3"
indicatif = { version = "0.17.0-rc.10" }
reqwest = { version = "0.11.10", features = ["json", "stream"] }
shadow-rs = { version = "0.11.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.7"
thiserror = "1.0"
tokio = { version = "1.18.2", features = ["full"] }
url = { version = "2.2.2" }
yansi = { version = "0.5" }
[target.'cfg(linux)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"

[build-dependencies]
shadow-rs = { version = "0.11.0" }

[profile.release]
lto = "thin"
opt-level = "s" # Optimize for size
strip = "debuginfo"

# Main cli binary
[[bin]]
name = "musd"
path = "src/main.rs"
