[package]
authors = ["hustcer"]
default-run = "musd"
description = "A CLI App to search and download musics"
edition = "2021"
exclude = ["nu", "Justfile", "cliff.toml", "bin"]
license = "MIT"
name = "musd"
readme = "README.md"
version = "0.2.5"
build = "build.rs"
homepage = "https://github.com/hustcer/musd"
repository = "https://github.com/hustcer/musd.git"
documentation = "https://github.com/hustcer/musd/blob/main/README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["default"] }
futures-util = "0.3.30"
indicatif = { version = "0.17.8" }
reqwest = { version = "0.11.25", features = ["json", "stream"] }
shadow-rs = { version = "0.27.0" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tabled = "0.7"
thiserror = "1.0.57"
tokio = { version = "1.29.1", features = ["full"] }
url = { version = "2.5.0" }
yansi = { version = "1.0" }
# [target.'cfg(linux)'.dependencies]
[target.'cfg(not(target_os = "windows"))'.dependencies]
# Our dependencies don't use OpenSSL on Windows
openssl = { version = "0.10.64", features = ["vendored"], optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[build-dependencies]
shadow-rs = { version = "0.27.0" }

[features]
# Enable to statically link OpenSSL; otherwise the system version will be used. Not enabled by default because it takes a while to build
static-link-openssl = ["dep:openssl"]

[profile.release]
lto = "thin"
opt-level = "s" # Optimize for size
strip = "debuginfo"

# Main cli binary
[[bin]]
name = "musd"
path = "src/main.rs"
